Remove margin on error message to stop Firefox wrapping

--- a/public/css/livevalidation.css
+++ b/public/css/livevalidation.css
@@ -1,6 +1,6 @@
 .LV_validation_message{
     font-weight:bold;
-    margin:0 0 0 5px;
+    margin:0 0 0 0px;
     float:right 
 }
 
